[package]
name = "sysrun"
authors = ["CodeOverFlow"]
version = "0.1.0"
edition = "2024"
description = "Run any executable as local SYSTEM account (no service required)."
keywords = ["admin", "system", "sysrun", "windows"]
categories = ["command-line-utilities", "os::windows-apis"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/codeOverFlow/sysrun"
repository = "https://github.com/codeOverFlow/sysrun"

[target.'cfg(windows)'.dependencies]
anyhow = "=1.0.97"
clap = { version = "=4.5.32", features = ["derive"] }
thiserror = "=2.0.12"
windows = { version = "=0.61.1", features = [
    "Win32_Security",
    "Win32_System_RemoteDesktop",
    "Win32_System_Threading",
] }